WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
154359
RemoteInspector deadlocks if _WKAutomationDelegate creates/registers a target synchronously
https://bugs.webkit.org/show_bug.cgi?id=154359
Summary
RemoteInspector deadlocks if _WKAutomationDelegate creates/registers a target...
Blaze Burg
Reported
2016-02-17 15:41:58 PST
Woops :|
Attachments
Proposed Fix
(2.41 KB, patch)
2016-02-17 15:45 PST
,
Blaze Burg
no flags
Details
Formatted Diff
Diff
Follow-up fix
(1.93 KB, patch)
2016-02-18 12:39 PST
,
Blaze Burg
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2016-02-17 15:42:23 PST
<
rdar://problem/24708897
>
Blaze Burg
Comment 2
2016-02-17 15:45:47 PST
Created
attachment 271598
[details]
Proposed Fix
Joseph Pecoraro
Comment 3
2016-02-17 15:47:31 PST
Comment on
attachment 271598
[details]
Proposed Fix r=me
WebKit Commit Bot
Comment 4
2016-02-17 16:37:48 PST
Comment on
attachment 271598
[details]
Proposed Fix Clearing flags on attachment: 271598 Committed
r196730
: <
http://trac.webkit.org/changeset/196730
>
WebKit Commit Bot
Comment 5
2016-02-17 16:37:53 PST
All reviewed patches have been landed. Closing bug.
Blaze Burg
Comment 6
2016-02-18 12:37:43 PST
Fix was correct but had a bug.
Blaze Burg
Comment 7
2016-02-18 12:39:19 PST
Created
attachment 271682
[details]
Follow-up fix
Joseph Pecoraro
Comment 8
2016-02-18 12:40:16 PST
Comment on
attachment 271682
[details]
Follow-up fix r=me
WebKit Commit Bot
Comment 9
2016-02-18 13:30:22 PST
Comment on
attachment 271682
[details]
Follow-up fix Clearing flags on attachment: 271682 Committed
r196774
: <
http://trac.webkit.org/changeset/196774
>
WebKit Commit Bot
Comment 10
2016-02-18 13:30:25 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug