RemoteInspector deadlocks if _WKAutomationDelegate creates/registers a target synchronously https://bugs.webkit.org/show_bug.cgi?id=154359 <rdar://problem/24708897>

Reviewed by Joseph Pecoraro.

RemoteInspector always grabs a lock whenever receiving or sending XPC messages. If it
forwards a new session request via _WKAutomationDelegate, and the client synchronously
creates and registers a session, then RemoteInspector will try to grab the lock again
while adding the session to its registry, causing a deadlock.

* UIProcess/Cocoa/AutomationClient.mm:
(WebKit::AutomationClient::requestAutomationSession): Add a dispatch_async() to
protect clients from accidentally deadlocking. They shouldn't have to care about
RemoteInspector's locking mechanisms.


Canonical link: https://commits.webkit.org/172484@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@196730 268f45cc-cd09-0410-ab3c-d52691b4dbfc